fixing width to sidebar instead of padding to it's aligned with left border

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,9 +83,8 @@ a {
 }
 
 .chat-sidebar {
-	background-image: linear-gradient(to right, #7221CE, #1264D4);
 	color: #fff;
-	padding: 20px 20px 60px;
+	width: 12rem;
 	margin: 0;
 	overflow-y: scroll;
 }
